  * MOL2 files can be written without substructure section (Issue #816)
  * GRO files with an incomplete set of velocities can now be read (Issue #820)
  * Fixed Atom.position/velocity/force returning a view onto Timestep array
    (Issue #755)
  * PDB files can now read a CRYST entry if it happens before model headers
    (Issue #849)

Changes

  * Added zero_based indices for HBondsAnalysis. (Issue #807)
  * Generalized contact analysis class `Contacts` added. (Issue #702)
  * Removed Bio.PDBParser and sloppy structure builder and all of
    MDAnalysis.coordinates.pdb (Issue #777)
  * PDB parsers/readers/writers replaced by "permissive"/"primitive"
    counterparts (formerly known as PrimitivePDBReader); the
    'permissive' keyword for Universe is now ignored and only the
    native MDAnalysis PDBReader is being used (Issue #777)
  * PDBReader only opens a single file handle in its lifetime,
    previously opened & closed handle each frame (Issue #850)

Deprecations (Issue #599)
  * Use of PrimitivePDBReader/Writer/Parser deprecated in favor of PDBReader/
    Writer/Parser (Issue #777)
  * Deprecated all `get_*` and `set_*` methods of Groups.
  * Deprecation warnings for accessing atom attributes from Residue,
    ResidueGroup, Segment, SegmentGroup. Will not be present or will
    give per-level results.
  * Deprecation warnings for accessing plural residue attributes from
    Residue or Segment (will disappear), or from SegmentGroup (will give
    per-Segment results).
  * Deprecation warnings for accessing plural segment attributes from Segment
    (will disappear).
  * Deprecated Atom number, pos, centroid, universe setter
  * Deprecated AtomGroup serials, write_selection
  * Deprecated Residue name, id
  * Deprecated Segment id, name
  * Deprecated as_Universe function; not needed
  * Deprecated ContactAnalysis and ContactAnalysis1 classes

02/28/16 tyler.je.reddy, kain88-de, jbarnoud, richardjgowers, orbeckst